--- a/Cargo.toml
+++ b/Cargo.toml
@@ -95,6 +95,7 @@ nucleo-matcher = "0.3.1"
 regex = { version = "1.10.3", default-features = false, features = ["std"] }
 rand = "0.8.5"
 base64 = "0.22.1"
+twox-hash = { version = "1.6.3" }
 
 [profile.release]
 debug = false
