--- a/crates/moonutil/Cargo.toml
+++ b/crates/moonutil/Cargo.toml
@@ -48,6 +48,7 @@ line-index.workspace = true
 nucleo-matcher.workspace = true
 which.workspace = true
 regex.workspace = true
+twox-hash.workspace = true
 
 [dev-dependencies]
 expect-test.workspace = true
